--- a/app/src/main/res/layout/item_view_product.xml
+++ b/app/src/main/res/layout/item_view_product.xml
@@ -48,6 +48,14 @@
                 android:textColor="@color/black"
                 android:textSize="15.60dp"/>
 
+            <TextView
+                android:id="@+id/tvProductPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="$25"
+                android:textColor="@color/black"
+                android:textSize="15.60dp"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,21 +63,10 @@
                 android:orientation="horizontal">
 
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <TextView
-                        android:id="@+id/tvProductPrice"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="$25"
-                        android:textColor="@color/black"
-                        android:textSize="15.60dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
 
                     <TextView
@@ -78,17 +75,28 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/et_background"
                         android:gravity="center"
+                        android:layout_weight="1"
                         android:padding="5dp"
                         android:text="Edit"
                         android:textColor="@color/green"
                         android:textSize="14.30sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/btnDelete"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/et_background"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:text="Delete"
+                        android:textColor="@color/green"
+                        android:textSize="14.30sp"
+                        android:textStyle="bold" />
 
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
 
 
             </LinearLayout>
